--- a/transmission_interface/mainpage.dox
+++ b/transmission_interface/mainpage.dox
@@ -14,9 +14,9 @@ it becomes easier to support arbitrary hardware drivers to software control.
 There are three main elements involved in setting up a transmission_interface:
   - The \ref transmission_interface::Transmission "Transmission" class defines an abstract interface for mapping
   position, velocity and effort variables between actuator and joint space.
-  Derived classes implement specific transmission types, such as
+  Derived classes implement specific \ref transmission_types "transmission types" such as
   \ref transmission_interface::SimpleTransmission "simple reducers",
-  \ref transmission_interface::DifferentialTransmission "differentials" and
+  \ref transmission_interface::DifferentialTransmission "differentials" or
   \ref transmission_interface::FourBarLinkageTransmission "four-bar linkages".
   Note that a single transmission may couple the variables of multiple actuators and joints (eg. a differential couples
   two actuators to two joints).
