fix spelling errors

--- a/joint_limits_interface/mainpage.dox
+++ b/joint_limits_interface/mainpage.dox
@@ -128,7 +128,7 @@ public:
     // Note: one can also enforce limits on a per-handle basis: handle.enforceLimits(period)
     jnt_limits_interface_.enforceLimits(period);
 
-    // Porpagate joint commands to actuators...
+    // Propagate joint commands to actuators...
 
     // Send actuator command to hardware...
   }
