--- a/hardware_interface/mainpage.dox
+++ b/hardware_interface/mainpage.dox
@@ -76,6 +76,7 @@ public:
   { 
     // Initialization of the robot's resources (joints, sensors, actuators) and
     // interfaces can be done here or inside init().
+    // E.g. parse the URDF for joint names & interfaces, then initialize them
   }
 
   bool init(ros::NodeHandle &root_nh, ros::NodeHandle &robot_hw_nh)
